appId: com.projetosv.fiscalize
---
- runFlow: subflows/login.yaml

- tapOn:
    id: "logout-button"
- extendedWaitUntil:
    visible:
      id: "login-submit"
    timeout: 10000

- stopApp
- launchApp
- extendedWaitUntil:
    visible:
      id: "login-submit"
    timeout: 20000
- assertNotVisible: "Minhas Demandas"
